<resources>
    <string name="app_name">Songbook</string>
    <string name="APP_KEY">ur3hpiunbn4ycb5</string>
    <string name="dbx_button_login">Login</string>
    <string name="dbx_button_sync">Sync</string>
    <string name="dbx_sync_never">Синхронизация не выполняляась</string>
    <string name="dbx_text">DropBox</string>
    <string name="loading">Загрузка</string>
    <string name="settings">Настройки</string>
    <string name="scroll_button">Scroll</string>
    <string name="default_song_text_size">Размер шрифта в тексте песни по умочланию</string>
    <string name="default_show_chord_text">Отображать подсказки для аккордов</string>
    <string name="songs_settings">Настройки песен</string>
    <string name="song_settings">Настройки песни</string>
    <string name="song_text_size">Размер шрифта в тексте песни</string>
    <string name="song_scroll_speed">Корректировка длительности песни, сек\n+ замедлить скроллинг\n- ускорить скроллинг</string>
    <string name="song_scroll_count_down">Задержка перед скроллингом, сек</string>
    <string name="edit">Редактировать</string>
    <string name="editing">Редактирование</string>
    <string name="save_question">Сохранить?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="tone">Тональность</string>
    <string name="find_AmDm">Найти на AmDm.ru</string>
    <string name="find_5lad">Найти на 5lad.ru</string>
    <string name="find_ukula">Найти на ukula.ru</string>
    <string name="find">Поиск</string>
    <string name="search_name">Название</string>
    <string name="search_title">Поиск AmDm</string>
    <string name="add_song_amdm">Добавить песню</string>
    <string name="song_saved">Песня добавлена</string>
    <string name="song_saved_error">Что то пошло не так</string>
    <string name="add_song_ok_button">Перейти к песне</string>
    <string name="add_song_cancel_button">Перейти к поиску</string>
    <string name="add_song_ad_title">Добавление песни</string>
    <string name="add_song_ad_message">Песня успешно добавлена</string>
    <string name="text_song_delete_song">Удалить</string>
    <string name="alert_dialog_delete_song_message_start">Удалить песню\n</string>
    <string name="alert_dialog_delete_artist_message_start">Удалить артиста\n</string>
    <string name="alert_dialog_delete_song_message_end">\nУверен?</string>
    <string name="alert_dialog_delete_song_title">Удаление песни</string>
    <string name="alert_dialog_delete_artist_title">Удаление артиста</string>
    <string name="add_ukulele_version">Добавить Укулеле версию</string>
    <string name="edit_ukulele_version">Редактировать Укулеле версию</string>
    <string name="guitar">Гитара</string>
    <string name="ukulele">Укулуеле</string>
    <string name="switch_ukulele">Укулеле</string>
    <string name="switch_guitar">Гитара</string>
</resources>