<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dbx_text"
        android:gravity="center"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/dbxTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dbx_sync_never"
                android:layout_marginEnd="20dp"
                android:textSize="16sp"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/dbxButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dbx_button_login" />
        </LinearLayout>



    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/songs_settings"
        android:gravity="center"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/fontSizeTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/default_song_text_size"
                android:layout_marginEnd="20dp"
                android:textSize="16sp"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageButton
                android:id="@+id/fsSongDownBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/fsSongTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textSize="20sp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:gravity="center"/>
            <ImageButton
                android:id="@+id/fsSongUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                android:layout_weight="1"/>
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/defaultScrollCountDownTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/default_song_text_size"
                android:layout_marginEnd="20dp"
                android:textSize="16sp"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageButton
                android:id="@+id/defaultScrollCountDownDownBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/defaultScrollCountDownTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textSize="20sp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:gravity="center"/>
            <ImageButton
                android:id="@+id/defaultScrollCountDownUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                android:layout_weight="1"/>
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_margin="8dp">
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/default_show_chord_text"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_margin="20dp"
            android:id="@+id/defaultShowChordSwitch"/>



    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsPathTV"
        android:text="path"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="clear"
        android:id="@+id/settingsClearCacheBtn"/>



    
    
    



</LinearLayout>