<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_settings"
        android:gravity="center"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/fontSizeTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/song_text_size"
                android:layout_marginEnd="20dp"
                android:textSize="16sp"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageButton
                android:id="@+id/fsSongDownBtn"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/fsSongTV"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:textSize="20sp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:gravity="center"/>
            <ImageButton
                android:id="@+id/fsSongUpBtn"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                android:layout_weight="1"/>
        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/scrollSpeedTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/song_scroll_speed"
                android:layout_marginEnd="20dp"
                android:textSize="16sp"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageButton
                android:id="@+id/scrollSongDownBtn"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/scrollSongTV"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="20sp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:gravity="center"/>
            <ImageButton
                android:id="@+id/scrollSongUpBtn"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                android:layout_weight="1"/>
        </LinearLayout>





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/scrollCountDownTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/song_scroll_count_down"
                android:layout_marginEnd="20dp"
                android:textSize="16sp"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageButton
                android:id="@+id/scrollCountDownDownBtn"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/scrollCountDownTV"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="20sp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:gravity="center"/>
            <ImageButton
                android:id="@+id/scrollCountDownUpBtn"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/toneTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tone"
                android:layout_marginEnd="20dp"
                android:textSize="16sp"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageButton
                android:id="@+id/toneDownBtn"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/toneTV"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="20sp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:gravity="center"/>
            <ImageButton
                android:id="@+id/toneUpBtn"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_margin="8dp">
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/default_show_chord_text"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_margin="20dp"
            android:id="@+id/showChordSwitch"/>



    </LinearLayout>






</LinearLayout>